Fix for Bug 286669 - jaxb compiler scripts not generating jaxb.properties correctly
- Created a XJC plugin in eclipselink.utils.jaxb to automatically add the MOXy jaxb.properties file.